--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -17,6 +17,7 @@
   position: relative;
   flex: 1 1 auto;
   min-width: 0; // avoid flex overflow
+  background: #000;
 }
 
 #app {
@@ -28,6 +29,7 @@
   display: block;
   width: 100%;
   height: 100%;
+  background: #000;
 }
 
 // Existing controls
