--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 
 @use "./ui/root";
 @use "./ui/stage-controls";
+@use "./ui/scene-toggles";
 @use "./ui/sidebar-layout";
 @use "./ui/sidebar-common";
 @use "./ui/sidebar-left";
