--- a/src/ui/templates/sidebar.tpl.html
+++ b/src/ui/templates/sidebar.tpl.html
@@ -1,5 +1,5 @@
 <div class="ui-sidebar-shell" data-ui="sidebar-right">
-  <aside class="ui-sidebar ui-sidebar--right" role="complementary" aria-label="Planet information">
+  <aside class="ui-sidebar ui-sidebar--right" role="complementary" aria-label="Body information">
     <header class="ui-sidebar__header">
       <div class="ui-sidebar__title">
         <h2>{{title}}</h2>
@@ -35,8 +35,8 @@
       <section class="ui-section">
         <h3>Selected</h3>
         <div class="ui-kv">
-          <div class="k">Planet</div>
-          <div class="v">{{selectedPlanetName}}</div>
+          <div class="k">Body</div>
+          <div class="v">{{selectedBodyName}}</div>
         </div>
         <p class="ui-hint">{{hint}}</p>
       </section>
