--- a/src/ui/templates/hud.tpl.html
+++ b/src/ui/templates/hud.tpl.html
@@ -12,7 +12,7 @@
           max="10"
           step="1"
           value="1"
-          data-action="speed-change"
+          data-speed-slider
           aria-label="Simulation speed preset"
         />
       </div>
@@ -24,7 +24,7 @@
     <button
       class="hud-speed__pause"
       type="button"
-      data-action="speed-toggle-pause"
+      data-speed-pause
       aria-label="Pause / resume simulation"
     >
       <span class="hud-speed__pauseIcon" aria-hidden="true"></span>
