--- a/src/ui/templates/sidebar-left.tpl.html
+++ b/src/ui/templates/sidebar-left.tpl.html
@@ -24,125 +24,61 @@
     <div class="ui-sidebar__content">
       <section class="ui-section">
         <div class="ui-planet-list" role="list">
-          <button
-            class="ui-planet"
-            type="button"
-            data-action="select-planet"
-            data-planet="sun"
-          >
-            <span
-              class="ui-planet__icon ui-planet__icon--sun"
-              aria-hidden="true"
-            ></span>
+          <button class="ui-planet" type="button" data-action="select-planet" data-planet="sun">
+            <span class="ui-planet__icon ui-planet__icon--sun" aria-hidden="true"></span>
             <span class="ui-planet__name">Sun</span>
           </button>
-          <button
-            class="ui-planet"
-            type="button"
-            data-action="select-planet"
-            data-planet="mercury"
-          >
-            <span
-              class="ui-planet__icon ui-planet__icon--mercury"
-              aria-hidden="true"
-            ></span>
+          <button class="ui-planet" type="button" data-action="select-planet" data-planet="mercury">
+            <span class="ui-planet__icon ui-planet__icon--mercury" aria-hidden="true"></span>
             <span class="ui-planet__name">Mercury</span>
           </button>
-          <button
-            class="ui-planet"
-            type="button"
-            data-action="select-planet"
-            data-planet="venus"
-          >
-            <span
-              class="ui-planet__icon ui-planet__icon--venus"
-              aria-hidden="true"
-            ></span>
+          <button class="ui-planet" type="button" data-action="select-planet" data-planet="venus">
+            <span class="ui-planet__icon ui-planet__icon--venus" aria-hidden="true"></span>
             <span class="ui-planet__name">Venus</span>
           </button>
-          <button
-            class="ui-planet"
-            type="button"
-            data-action="select-planet"
-            data-planet="earth"
-          >
-            <span
-              class="ui-planet__icon ui-planet__icon--earth"
-              aria-hidden="true"
-            ></span>
+          <button class="ui-planet" type="button" data-action="select-planet" data-planet="earth">
+            <span class="ui-planet__icon ui-planet__icon--earth" aria-hidden="true"></span>
             <span class="ui-planet__name">Earth</span>
           </button>
-          <button
-            class="ui-planet"
-            type="button"
-            data-action="select-planet"
-            data-planet="mars"
-          >
-            <span
-              class="ui-planet__icon ui-planet__icon--mars"
-              aria-hidden="true"
-            ></span>
+          <button class="ui-planet" type="button" data-action="select-planet" data-planet="mars">
+            <span class="ui-planet__icon ui-planet__icon--mars" aria-hidden="true"></span>
             <span class="ui-planet__name">Mars</span>
           </button>
-          <button
-            class="ui-planet"
-            type="button"
-            data-action="select-planet"
-            data-planet="jupiter"
-          >
-            <span
-              class="ui-planet__icon ui-planet__icon--jupiter"
-              aria-hidden="true"
-            ></span>
+          <button class="ui-planet" type="button" data-action="select-planet" data-planet="ceres">
+            <span class="ui-planet__icon ui-planet__icon--ceres" aria-hidden="true"></span>
+            <span class="ui-planet__name">Ceres</span>
+          </button>
+          <button class="ui-planet" type="button" data-action="select-planet" data-planet="jupiter">
+            <span class="ui-planet__icon ui-planet__icon--jupiter" aria-hidden="true"></span>
             <span class="ui-planet__name">Jupiter</span>
           </button>
-          <button
-            class="ui-planet"
-            type="button"
-            data-action="select-planet"
-            data-planet="saturn"
-          >
-            <span
-              class="ui-planet__icon ui-planet__icon--saturn"
-              aria-hidden="true"
-            ></span>
+          <button class="ui-planet" type="button" data-action="select-planet" data-planet="saturn">
+            <span class="ui-planet__icon ui-planet__icon--saturn" aria-hidden="true"></span>
             <span class="ui-planet__name">Saturn</span>
           </button>
-          <button
-            class="ui-planet"
-            type="button"
-            data-action="select-planet"
-            data-planet="uranus"
-          >
-            <span
-              class="ui-planet__icon ui-planet__icon--uranus"
-              aria-hidden="true"
-            ></span>
+          <button class="ui-planet" type="button" data-action="select-planet" data-planet="uranus">
+            <span class="ui-planet__icon ui-planet__icon--uranus" aria-hidden="true"></span>
             <span class="ui-planet__name">Uranus</span>
           </button>
-          <button
-            class="ui-planet"
-            type="button"
-            data-action="select-planet"
-            data-planet="neptune"
-          >
-            <span
-              class="ui-planet__icon ui-planet__icon--neptune"
-              aria-hidden="true"
-            ></span>
+          <button class="ui-planet" type="button" data-action="select-planet" data-planet="neptune">
+            <span class="ui-planet__icon ui-planet__icon--neptune" aria-hidden="true"></span>
             <span class="ui-planet__name">Neptune</span>
           </button>
-          <button
-            class="ui-planet"
-            type="button"
-            data-action="select-planet"
-            data-planet="pluto"
-          >
-            <span
-              class="ui-planet__icon ui-planet__icon--pluto"
-              aria-hidden="true"
-            ></span>
+          <button class="ui-planet" type="button" data-action="select-planet" data-planet="pluto">
+            <span class="ui-planet__icon ui-planet__icon--pluto" aria-hidden="true"></span>
             <span class="ui-planet__name">Pluto</span>
+          </button>
+          <button class="ui-planet" type="button" data-action="select-planet" data-planet="haumea">
+            <span class="ui-planet__icon ui-planet__icon--haumea" aria-hidden="true"></span>
+            <span class="ui-planet__name">Haumea</span>
+          </button>
+          <button class="ui-planet" type="button" data-action="select-planet" data-planet="makemake">
+            <span class="ui-planet__icon ui-planet__icon--makemake" aria-hidden="true"></span>
+            <span class="ui-planet__name">Makemake</span>
+          </button>
+          <button class="ui-planet" type="button" data-action="select-planet" data-planet="eris">
+            <span class="ui-planet__icon ui-planet__icon--eris" aria-hidden="true"></span>
+            <span class="ui-planet__name">Eris</span>
           </button>
         </div>
       </section>
